Add endpoint to list clients (#268)
* Nest client metadata files in folders

* Remove fallback code for missing owner metadata

* Refactor from TextStorage to ObjectStorage

* Fix listing of files that contain a dot

* Add method to list domains

* Add endpoint to list domains
